samples/_failures_safe/1761669964_9b035d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_9e8f7b1a.c: In function ‘main’:
./samples/SAFE/__tmp_9e8f7b1a.c:142:9: error: expected expression at end of input
  142 |         return
      |         ^~~~~~
./samples/SAFE/__tmp_9e8f7b1a.c:142:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_9e8f7b1a.c:142:9: error: expected declaration or statement at end of input
